- [Feature] Supporting SOCKS proxies
- [Feature] Change file permissions on multiple files
- [Feature] Copy the URL of a remote site
- [Bugfix] Use date formatting rules set in the System Preferences
- [Featuer] Preference item to set the action when double-clicking files (Download or edit)
- [Bugfix] Remembering the position of the browser window

2.3.1
- [Feature] Chinese (Simplified) Localization
- [Feature] Rendezvous services in Bookmark menu
- [Bugfix] Upper level directories had to be listed first when uploading files
- [Bugfix] Changes to bookmarks won't be saved
- [Feature] Preference item to disable the update check
- [Feature] Toolbar item to open downloaded files with default application
- [Feature] Graceful application termination (Properly ask to close all connections and then quit)
- [Bugfix] Remembering choosen directories in open and save dialogs

2.3
- [Feature] Finnish Localization
- [Feature] Supporting Keyboard Interactive (PAM) Authentication (SSH)
- [Bugfix] not all available Rendezvous services were listed
- [Bugfix] Removed 'Type ahead' feature of the browser (responsible for frequent crashes)

2.3b2
- [Feature] Much improved queue management (fewer connections)
- [Feature] Resume downloads (SFTP)
- [Feature] Resume uploads (SFTP)
- [Feature] Resume uploads (FTP)
- [Feature] Move files on remote host by drag and drop
- [Feature] Drag files onto bookmark to quickly upload
- [Feature] Bookmarks are shown in the menu
- [Feature] Menu item 'Download As...'
- [Feature] Editing multiple files in the external editor with the same name
- [Feature] Warning if a duplicate exists when uploading files
- [Feature] 'Apply to all' checkbox in dialog asking for replace/resume/skip existing files
- [Feature] Improved caching of directory listings
- [Feature] When dropping files onto folders it will upload these into the folder
- [Feature] When typing the first letter of a file it gets selected in the browser